--- a/WebsiteMain.html
+++ b/WebsiteMain.html
@@ -19,8 +19,8 @@
                 <li><a href="#section3">AI Art</a></li>
                 <li><a href="#section4">AI Music</a></li>
                 <li><a href="#section5">Ethic and Controversy</a></li>
-                <li><a href="Mini Game.html" target="_blank">Interactive Mini Game</a></li>
-                <li><a href="Mini quiz.html" target="_blank">Interactive Mini Quiz</a></li>
+                <li><a href="subweb/Mini Game.html" target="_blank">Interactive Mini Game</a></li>
+                <li><a href="subweb/Mini quiz.html" target="_blank">Interactive Mini Quiz</a></li>
             </ul>
         </nav>
     	</div>
@@ -221,7 +221,7 @@
 						Imperfections and Human Touch: Human art often contains imperfections, variations, and subtle nuances that stem from the artist's hand and eye. These imperfections can give a sense of authenticity and individuality to the artwork. AI-generated art, on the other hand, tends to be technically precise and may lack the organic, imperfect qualities associated with human creations.
 					</li>
 					<p>
-						After learning about how to distinguishing between AI art and human art, here is a <a href="Mini Game.html" target="_blank">little game</a> do see how well you do in guess whether or not it is AI art or human art.
+						After learning about how to distinguishing between AI art and human art, here is a <a href="subweb/Mini Game.html" target="_blank">little game</a> do see how well you do in guess whether or not it is AI art or human art.
 					</p>
 					<p>
 					</p>
@@ -318,7 +318,7 @@
 			<div class="page">
 				<div class="textbox">
 					<p style="font-size: 30px; text-align: center;">
-						Thanks for spending your time on the poorly made website, for your reward, here is a <a href="Mini quiz.html" target="_blank">quiz</a> to test the knowledge you learned in this website.
+						Thanks for spending your time on the poorly made website, for your reward, here is a <a href="subweb/Mini quiz.html" target="_blank">quiz</a> to test the knowledge you learned in this website.
 					</p>
 				</div>
 			</div>
